--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#181818" />
-    
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,500,600,700" rel="stylesheet">
     <title>Jumpcut Front-end Test</title>
   </head>
   <body>
@@ -40,11 +41,13 @@
     </symbol>
     <symbol id="icon--idea" viewBox="0 0 32 32">
     <title>idea</title>
-    <path fill="none" stroke="#434345" style="stroke: var(--color2, #434345)" stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="4" stroke-width="2.1333" d="M16 2.133v2.133"></path>
-    <path fill="none" stroke="#434345" style="stroke: var(--color2, #434345)" stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="4" stroke-width="2.1333" d="M5.44 6.507l1.504 1.504"></path>
-    <path fill="none" stroke="#434345" style="stroke: var(--color2, #434345)" stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="4" stroke-width="2.1333" d="M1.067 17.067h2.133"></path>
-    <path fill="none" stroke="#434345" style="stroke: var(--color2, #434345)" stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="4" stroke-width="2.1333" d="M30.933 17.067h-2.133"></path>
-    <path fill="none" stroke="#434345" style="stroke: var(--color2, #434345)" stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="4" stroke-width="2.1333" d="M26.56 6.507l-1.504 1.504"></path>
+    <g class="idea__light">
+    <path fill="none" stroke="#bdbdbd" style="stroke: var(--color2, #bdbdbd)" stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="4" stroke-width="2.1333" d="M16 2.133v2.133"></path>
+    <path fill="none" stroke="#bdbdbd" style="stroke: var(--color2, #bdbdbd)" stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="4" stroke-width="2.1333" d="M5.44 6.507l1.504 1.504"></path>
+    <path fill="none" stroke="#bdbdbd" style="stroke: var(--color2, #bdbdbd)" stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="4" stroke-width="2.1333" d="M1.067 17.067h2.133"></path>
+    <path fill="none" stroke="#bdbdbd" style="stroke: var(--color2, #bdbdbd)" stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="4" stroke-width="2.1333" d="M30.933 17.067h-2.133"></path>
+    <path fill="none" stroke="#bdbdbd" style="stroke: var(--color2, #bdbdbd)" stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="4" stroke-width="2.1333" d="M26.56 6.507l-1.504 1.504"></path>
+    </g>
     <path d="M19.819 27.392h-7.019v1.184c0 2.005 1.483 2.357 3.477 2.357s3.541-0.352 3.541-2.357z"></path>
     <path d="M24.533 16.789c0-0.007 0-0.015 0-0.023 0-4.548-3.687-8.235-8.235-8.235-0.049 0-0.097 0-0.146 0.001l0.007-0c-4.365 0.114-7.889 3.561-8.127 7.883l-0.001 0.021c-0.006 0.121-0.010 0.263-0.010 0.406 0 2.676 1.291 5.050 3.284 6.533l0.022 0.015c0.89 0.636 1.465 1.663 1.472 2.826v0.001h7.072c0-1.129 0.503-2.14 1.296-2.823l0.005-0.004c2.044-1.451 3.361-3.808 3.361-6.474 0-0.045-0-0.091-0.001-0.136l0 0.007z"></path>
     </symbol>
